Made choices be handled at the start of each player turn